SalesforceCICD/force-app/main/default/objects/Bicycle__c/Bicycle__c.object-meta.xml
<CustomObject>
    <label>Bicycle</label>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Bicycle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bicycles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>