SalesforceCICD/force-app/main/default/objects/Bicycle__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pinarello</fullName>
            </value>
            <value>
                <fullName>Simplon</fullName>
            </value>
            <value>
                <fullName>Canyon</fullName>
            </value>
            <value>
                <fullName>Kuota</fullName>
            </value>
            <value>
                <fullName>Scott</fullName>
            </value>
            <value>
                <fullName>Cube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>