SalesforceCICD/force-app/main/default/objects/Bicycle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fasto-001</fullName>
            </value>
            <value>
                <fullName>Fasto-002</fullName>
            </value>
            <value>
                <fullName>Fasto-003</fullName>
            </value>
            <value>
                <fullName>Kiaro100</fullName>
            </value>
            <value>
                <fullName>Kiaro200</fullName>
            </value>
            <value>
                <fullName>Kiaro200A</fullName>
            </value>
            <value>
                <fullName>Neuron CF9</fullName>
            </value>
            <value>
                <fullName>Neuron CF10</fullName>
            </value>
            <value>
                <fullName>Neuron CF20</fullName>
            </value>
            <value>
                <fullName>Kross1</fullName>
            </value>
            <value>
                <fullName>Kross2</fullName>
            </value>
            <value>
                <fullName>Kross3A</fullName>
            </value>
            <value>
                <fullName>Kross3B</fullName>
            </value>
            <value>
                <fullName>Beast-1000</fullName>
            </value>
            <value>
                <fullName>Beast-2000</fullName>
            </value>
            <value>
                <fullName>Moun-001</fullName>
            </value>
            <value>
                <fullName>Moun-002</fullName>
            </value>
            <value>
                <fullName>Moun-003</fullName>
            </value>
            <value>
                <fullName>Gradle-001</fullName>
            </value>
            <value>
                <fullName>Gradle-002</fullName>
            </value>
            <value>
                <fullName>Gradle-003</fullName>
            </value>
            <value>
                <fullName>Gradle-004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>